# kinect1_drive

./: CMakeLists.txt  README
config/: kinect1.yaml  kinect1.yaml~
src/: CMakeLists.txt  kinect1_drive.cpp
